@@ -297,7 +297,7 @@ public function __construct($arguments) {
   $this->itemUrl = drupal_realpath($this->dkanHarvestSource->getCacheDir()) .
     '/:id';
 
-  $this->source = new MigrateSourceList(
+  $this->source = new HarvestMigrateSourceList(
     new HarvestList($this->dkanHarvestSource->getCacheDir()),
     new MigrateItemJSON($this->itemUrl),
     array(),
