@@ -68,3 +68,4 @@ files[] = includes/HarvestList.php
 files[] = includes/HarvestItem.php
 files[] = includes/HarvestCache.php
 files[] = includes/HarvestMigrateSQLMap.php
+files[] = includes/HarvestMigrateSourceList.php
